# Simuless

./: .clang-format  .clang-tidy  .clang-tidy.yaml  .cmakelintrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  SystemDiagram.drawio
.github/workflow/: ci.yml
docs/: development-flow.md
examples/: diff_eq_plot.c  gain_plot.c  integrator_plot.c  parser_encoder_test.c  smls_io_example.c  tcp_float.c
osal/: CMakeLists.txt
osal/inc/: osal_net.h  osal_time.h
osal/posix/: osal_net_posix.c  osal_time_posix.c
osal/windows/: osal_net_windows.c  osal_time_windows.c
smls_graph/: CMakeLists.txt
smls_graph/inc/: smls_edge.h
smls_graph/src/: smls_edge.c
smls_io/: CMakeLists.txt
smls_io/inc/: smls_io.h  smls_io_tcp.h  smls_socket_port.h  smls_uri.h
smls_io/src/: smls_io.c  smls_io_tcp.c  smls_socket_port.h  smls_uri.c
smls_io/src/port/lwip/: smls_socket_port.c
smls_io/src/port/posix/: smls_socket_port.c
smls_io/src/port/windows/: smls_socket_port.c
smls_math/: CMakeLists.txt
smls_math/inc/: smls_linalg.h  smls_misc.h
smls_math/math_core/linalg/: add.c  balance.c  chol.c  cholupdate.c  det.c  dlyap.c  eig.c  eig_sym.c  expm.c  hankel.c  inv.c  linsolve_chol.c  linsolve_gauss.c  linsolve_lower_triangular.c  linsolve_lup.c  linsolve_qr.c  linsolve_upper_triangular.c  lup.c  mul.c  nonlinsolve.c  norm.c  pinv.c  qr.c  sum.c  svd_golub_reinsch.c  svd_jacobi_one_sided.c  tran.c
smls_math/math_core/misc/: cat.c  constrain.c  cut.c  insert.c  mean.c  print.c  randn.c  sign.c  stddev.c
smls_runtime/: CMakeLists.txt
smls_runtime/inc/: gnuplotter.h  smls_diff_eq.h  smls_edge.h  smls_expr.h  smls_gain.h  smls_graph.h  smls_integrator.h  smls_log.h  smls_node.h  smls_op.h  smls_op_list.h  smls_ringbuf.h  smls_slot.h
smls_runtime/src/: gnuplotter.c  smls_diff_eq.c  smls_edge.c  smls_gain.c  smls_integrator.c  smls_node.c  smls_ringbuf.c
telemetry/: CMakeLists.txt
telemetry/inc/: frame.h  frame_encoder.h  frame_parser.h  smls_frame_encoder.h  smls_frame_parser.h
telemetry/src/: frame_encoder.c  frame_parser.c  smls_frame_encoder.c  smls_frame_parser.c
tests/: CMakeLists.txt  parser_encoder_test.c  smls_io_socket_test.c  smls_io_tcp_test.c  transport_tcp_multi_io_test.c  transport_tcp_state_buffer_test.c  transport_udp_multi_io_test.c
tests/math_core/linalg/: linalg_basic_test.c
tests/smls_graph/: smls_edge_test.c
tests/smls_runtime/: smls_diff_eq_test.c  smls_edge_test.c  smls_gain_test.c  smls_integrator_test.c
transport/: CMakeLists.txt
transport/inc/: transport_tcp.h  transport_tcp_port.h  transport_tcp_sm.h  transport_types.h  transport_udp.h  transport_udp_port.h
transport/src/: transport.c  transport_tcp.c  transport_udp.c
